load jars as modules at runtime